package org.example.ecommerce;

public abstract class MetodoPago {

    abstract void procesarPago(double importe);

}
